--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@
     width: 100%;
     padding: 20px;
     font-size: 5rem;
-    text-align: center;
+    text-align: left;
     border: none;
     background-color: hsl(0, 0%, 20%);
     color: white;
